--- a/index.html
+++ b/index.html
@@ -108,40 +108,81 @@
     <div class="meta" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</div>
     <h2 data-lang-nl="Data" data-lang-en="Dates">Locaties</h2>
 
-    <!-- Opening + RSVP -->
-    <article class="tile" style="border:1px solid var(--line); padding:18px; margin-bottom:28px">
-      <h3 class="meta" style="margin:0 0 10px"
-          data-lang-nl="Opening — vr 13/9"
-          data-lang-en="Opening — Fri 13/9">Opening — vr 13/9</h3>
+ <!-- OPENING PROGRAMMA -->
+<article class="tile opening-program">
+  <h3 class="meta" data-lang-nl="Opening — vr 13/9" data-lang-en="Opening — Fri 13/9">
+    Opening — vr 13/9
+  </h3>
 
-      <p style="margin:0 0 10px"
-         data-lang-nl="Iedereen welkom. RSVP en we zetten je op de guestlist — je krijgt een gratis drankje."
-         data-lang-en="Everyone welcome. RSVP and we’ll put you on the guestlist — you’ll get a free drink.">
-        Iedereen welkom. RSVP en we zetten je op de guestlist — je krijgt een gratis drankje.
-      </p>
+  <p data-lang-nl="Iedereen is welkom bij de feestelijke opening. RSVP en we zetten je op de guestlist: je krijgt een gratis drankje."
+     data-lang-en="Everyone is welcome at the festive opening. RSVP and we’ll add you to the guestlist: you’ll get a free drink.">
+    Iedereen is welkom bij de feestelijke opening. RSVP en we zetten je op de guestlist: je krijgt een gratis drankje.
+  </p>
 
-      <p style="margin:0 0 16px">
-        <a class="mono-link" href="#rsvp" data-lang-nl="RSVP" data-lang-en="RSVP">RSVP</a>
-      </p>
+  <div class="program-schedule">
+    <div class="program-block">
+      <time>15:00</time>
+      <div>
+        <strong data-lang-nl="De deuren gaan open" data-lang-en="Doors open">De deuren gaan open</strong><br>
+        <span data-lang-nl="Start van de expo in de vitrines" data-lang-en="Exhibition starts in the shop windows">Start van de expo in de vitrines</span>
+      </div>
+    </div>
 
-      <!-- Tijdslijn -->
-      <ul class="timeline" style="list-style:none; padding:0; margin:0; display:grid; gap:10px">
-        <li><time>15:00</time> — <span data-lang-nl="Opening" data-lang-en="Opening">Opening</span></li>
-        <li><time>15:30–15:50</time> — <span data-lang-nl="Speeches (intro performances + ga op pad!)" data-lang-en="Speeches (introduce performances + go walk!)">Speeches (intro performances + ga op pad!)</span></li>
-        <li><time>15:50–16:20</time> — <span data-lang-nl="Performance 1 — Niels Poiz" data-lang-en="Performance 1 — Niels Poiz">Performance 1 — Niels Poiz</span></li>
-        <li><time>16:30</time> — <span data-lang-nl="Start rondleiding (guided tour)" data-lang-en="Guided tour starts">Start rondleiding (guided tour)</span></li>
-        <li><time>18:00</time> — <span data-lang-nl="Start rondleiding (guided tour)" data-lang-en="Guided tour starts">Start rondleiding (guided tour)</span></li>
-        <li><time>19:30</time> — <span data-lang-nl="Speeches (intro performances + ga op pad!)" data-lang-en="Speeches (introduce performances + go walk!)">Speeches (intro performances + ga op pad!)</span></li>
-        <li><time>19:50–20:20</time> — <span data-lang-nl="Performance 2 — Camille Lemille" data-lang-en="Performance 2 — Camille Lemille">Performance 2 — Camille Lemille</span></li>
-        <li><time>20:30</time> — <span data-lang-nl="Start rondleiding + DJ" data-lang-en="Guided tour starts + DJ">Start rondleiding + DJ</span></li>
-      </ul>
+    <div class="program-block">
+      <time>15:30</time>
+      <div>
+        <strong data-lang-nl="Welkom & speeches" data-lang-en="Welcome & speeches">Welkom & speeches</strong><br>
+        <span data-lang-nl="Introductie van de kunstenaars en performances" data-lang-en="Introduction of artists and performances">Introductie van de kunstenaars en performances</span>
+      </div>
+    </div>
 
-      <p style="margin:14px 0 0"
-         data-lang-nl="De werken blijven doorlopend zichtbaar in de vitrines t.e.m. 5/10."
-         data-lang-en="Works remain visible continuously in the shop windows until 5/10.">
-        De werken blijven doorlopend zichtbaar in de vitrines t.e.m. 5/10.
-      </p>
-    </article>
+    <div class="program-block">
+      <time>15:50</time>
+      <div>
+        <strong>Performance — Niels Poiz</strong><br>
+        <span data-lang-nl="Taal, muziek en performance" data-lang-en="Language, music and performance">Taal, muziek en performance</span>
+      </div>
+    </div>
+
+    <div class="program-block">
+      <time>16:30 & 18:00</time>
+      <div>
+        <strong data-lang-nl="Rondleidingen" data-lang-en="Guided tours">Rondleidingen</strong><br>
+        <span data-lang-nl="Ontdek de werken samen met gids" data-lang-en="Discover the works with a guide">Ontdek de werken samen met gids</span>
+      </div>
+    </div>
+
+    <div class="program-block">
+      <time>19:30</time>
+      <div>
+        <strong data-lang-nl="Tweede reeks speeches" data-lang-en="Second round of speeches">Tweede reeks speeches</strong><br>
+        <span data-lang-nl="Opnieuw introductie van de avondperformances" data-lang-en="Introduction of the evening performances">Opnieuw introductie van de avondperformances</span>
+      </div>
+    </div>
+
+    <div class="program-block">
+      <time>19:50</time>
+      <div>
+        <strong>Performance — Camille Lemille</strong><br>
+        <span data-lang-nl="Performance rond taal en bureaucratie" data-lang-en="Performance on language and bureaucracy">Performance rond taal en bureaucratie</span>
+      </div>
+    </div>
+
+    <div class="program-block">
+      <time>20:30</time>
+      <div>
+        <strong data-lang-nl="Avondtour & DJ" data-lang-en="Evening tour & DJ">Avondtour & DJ</strong><br>
+        <span data-lang-nl="Sluit de avond feestelijk af" data-lang-en="End the evening in style">Sluit de avond feestelijk af</span>
+      </div>
+    </div>
+  </div>
+
+  <p data-lang-nl="De werken blijven zichtbaar in de vitrines tot en met 5 oktober."
+     data-lang-en="The works remain visible in the shop windows until October 5th.">
+    De werken blijven zichtbaar in de vitrines tot en met 5 oktober.
+  </p>
+</article>
+
 
 <!-- ===============================
      vanaf hier staat het locatiegrid
