--- a/Invite.html
+++ b/Invite.html
@@ -1,252 +1,237 @@
-<!-- ===== VITRIEN A5 KAART ===== -->
-<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Uitnodiging — VITRIEN Opening</title>
 
-<style>
-  :root {
-    --card-bg: #ffffff;
-    --card-fg: #000;
-    --muted: #444;
-    --rule: #e6e6e6;
-    --accent: #000; /* sober zwart, past bij je minimal look */
-  }
+  <!-- Fonts (zelfde als site) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 
-  /* Volledige viewport, kaart centreren */
-  .a5-stage {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-    padding: 24px;
-    background: #f7f7f7; /* desgewenst matchen met je siteachtergrond */
-  }
-
-  /* De kaart zelf (A5 verhouding, responsive) */
-  .a5-card {
-    background: var(--card-bg);
-    color: var(--card-fg);
-    width: min(92vw, 720px);
-    aspect-ratio: 148 / 210; /* A5 portret verhouding */
-    border: 1px solid var(--rule);
-    box-shadow: 0 6px 24px rgba(0,0,0,.08);
-    border-radius: 12px;
-    display: flex;
-    overflow: hidden; /* zodat content niet buiten randen valt */
-  }
-
-  /* Scrollbare inhoud binnen de kaart */
-  .a5-content {
-    font-family: "IM Fell English", serif; /* matcht de Vitrien-website */
-    line-height: 1.35;
-    padding: clamp(18px, 3.2vw, 28px);
-    overflow: auto;
-    width: 100%;
-  }
-
-  /* Header / titel */
-  .a5-title {
-    font-size: clamp(28px, 5.4vw, 40px);
-    line-height: 1.05;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
-
-  .a5-sub {
-    margin-top: 6px;
-    font-size: clamp(14px, 2.3vw, 18px);
-    color: var(--muted);
-  }
-
-  .a5-block {
-    margin-top: clamp(12px, 2.2vw, 18px);
-    font-size: clamp(14px, 2.2vw, 18px);
-  }
-
-  .a5-rule {
-    border: 0;
-    border-top: 1px solid var(--rule);
-    margin: clamp(12px, 2vw, 16px) 0;
-  }
-
-  .a5-program h4,
-  .a5-info h4 {
-    font-size: clamp(14px, 2.1vw, 16px);
-    text-transform: uppercase;
-    letter-spacing: 0.06em;
-    margin-bottom: 6px;
-  }
-
-  .a5-program ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: grid;
-    gap: 4px;
-    font-variant-numeric: tabular-nums;
-  }
-
-  .a5-program li {
-    display: grid;
-    grid-template-columns: 88px 1fr;
-    gap: 12px;
-  }
-
-  .a5-cta {
-    margin-top: clamp(10px, 2vw, 16px);
-    font-weight: 500;
-  }
-
-  .a5-cta a {
-    color: var(--accent);
-    text-decoration: underline;
-    text-underline-offset: 2px;
-  }
-
-  .a5-smallprint {
-    margin-top: clamp(10px, 2vw, 16px);
-    font-size: 12px;
-    color: var(--muted);
-  }
-
-  /* Taal-switch */
-  .lang-switch {
-    display: inline-flex;
-    border: 1px solid var(--rule);
-    border-radius: 999px;
-    overflow: hidden;
-    margin-bottom: 10px;
-  }
-
-  .lang-switch button {
-    background: transparent;
-    border: none;
-    padding: 6px 10px;
-    font-size: 13px;
-    cursor: pointer;
-  }
-  .lang-switch button[aria-pressed="true"] {
-    background: #eee;
-  }
-
-  /* Print als A5 */
-  @media print {
-    @page { size: A5 portrait; margin: 10mm; }
-    body { background: #fff; }
-    .a5-stage { padding: 0; }
-    .a5-card { width: 100%; aspect-ratio: auto; border: none; box-shadow: none; }
-  }
-</style>
-
-<div class="a5-stage" id="vitrien-a5-card">
-  <div class="a5-card">
-    <div class="a5-content">
-      <div class="lang-switch" role="tablist" aria-label="Language">
-        <button id="btn-nl" role="tab" aria-selected="true" aria-pressed="true">NL</button>
-        <button id="btn-en" role="tab" aria-selected="false" aria-pressed="false">EN</button>
-      </div>
-
-      <!-- NL -->
-      <section id="lang-nl">
-        <h1 class="a5-title">Opening Vitrien</h1>
-        <div class="a5-sub">Vrijdag 13 september 2025 — Bondgenotenlaan, Leuven</div>
-
-        <div class="a5-block"><strong>Startpunt: Huis Delsart, Bondgenotenlaan 62</strong></div>
-
-        <hr class="a5-rule">
-
-        <div class="a5-block">
-          Tien kunstenaars. Tien winkels. Eén straat vol kunst.
-        </div>
-
-        <div class="a5-program a5-block">
-          <h4>Programma</h4>
-          <ul>
-            <li><span>15:00</span><span>Opening</span></li>
-            <li><span>15:30</span><span>Speeches</span></li>
-            <li><span>15:50</span><span>Performance 1 — Niels Poiz</span></li>
-            <li><span>16:30</span><span>Rondleiding</span></li>
-            <li><span>18:00</span><span>Rondleiding</span></li>
-            <li><span>19:30</span><span>Speeches</span></li>
-            <li><span>19:50</span><span>Performance 2</span></li>
-            <li><span>20:30</span><span>Performance 3</span></li>
-          </ul>
-        </div>
-
-        <div class="a5-info a5-block">
-          <h4>Info</h4>
-          Iedereen welkom, gratis toegang. Vitrien opent met installaties, performances, rondleidingen en cocktails.
-        </div>
-
-        <div class="a5-cta a5-block">
-          RSVP via <a href="https://www.vitrien.be" target="_blank" rel="noopener">www.vitrien.be</a> en ontvang een gratis drankje.
-        </div>
-
-        <div class="a5-smallprint">
-          V.U.: LOV2030, Evi Gillard, Professor Roger Van Overstraetenplein 1, 3000 Leuven — niet op de openbare weg gooien.
-        </div>
-      </section>
-
-      <!-- EN -->
-      <section id="lang-en" hidden>
-        <h1 class="a5-title">Opening Vitrien</h1>
-        <div class="a5-sub">Friday 13 September 2025 — Bondgenotenlaan, Leuven</div>
-
-        <div class="a5-block"><strong>Starting point: Huis Delsart, Bondgenotenlaan 62</strong></div>
-
-        <hr class="a5-rule">
-
-        <div class="a5-block">
-          Ten artists. Ten shops. One street full of art.
-        </div>
-
-        <div class="a5-program a5-block">
-          <h4>Programme</h4>
-          <ul>
-            <li><span>15:00</span><span>Opening</span></li>
-            <li><span>15:30</span><span>Speeches</span></li>
-            <li><span>15:50</span><span>Performance 1 — Niels Poiz</span></li>
-            <li><span>16:30</span><span>Guided tour</span></li>
-            <li><span>18:00</span><span>Guided tour</span></li>
-            <li><span>19:30</span><span>Speeches</span></li>
-            <li><span>19:50</span><span>Performance 2</span></li>
-            <li><span>20:30</span><span>Performance 3</span></li>
-          </ul>
-        </div>
-
-        <div class="a5-info a5-block">
-          <h4>Info</h4>
-          Free and open to all. Vitrien opens with installations, performances, guided tours and cocktails.
-        </div>
-
-        <div class="a5-cta a5-block">
-          RSVP at <a href="https://www.vitrien.be" target="_blank" rel="noopener">www.vitrien.be</a> and enjoy a free drink.
-        </div>
-
-        <div class="a5-smallprint">
-          Publisher: LOV2030, Evi Gillard, Professor Roger Van Overstraetenplein 1, 3000 Leuven — please do not litter.
-        </div>
-      </section>
-    </div>
-  </div>
-</div>
-
-<script>
-  (function () {
-    const nl = document.getElementById('lang-nl');
-    const en = document.getElementById('lang-en');
-    const btnNL = document.getElementById('btn-nl');
-    const btnEN = document.getElementById('btn-en');
-
-    function setLang(lang) {
-      const isNL = lang === 'nl';
-      nl.hidden = !isNL;
-      en.hidden = isNL;
-      btnNL.setAttribute('aria-pressed', String(isNL));
-      btnEN.setAttribute('aria-pressed', String(!isNL));
-      btnNL.setAttribute('aria-selected', String(isNL));
-      btnEN.setAttribute('aria-selected', String(!isNL));
+  <style>
+    /* ===============================
+       Design tokens
+    ================================ */
+    :root{
+      --fg:#111;
+      --muted:#6f6f6f;
+      --line:#e9e9e9;
+      --ff-sans: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      --ff-serif: "EB Garamond", Georgia, serif;
+      --ff-mono: "IBM Plex Mono", ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
     }
 
-    btnNL.addEventListener('click', () => setLang('nl'));
-    btnEN.addEventListener('click', () => setLang('en'));
-  })();
-</script>
-<!-- ===== EINDE VITRIEN A5 KAART ===== -->
+    /* ===============================
+       Print-instellingen (A5 portret)
+    ================================ */
+    @page{ size: A5 portrait; margin:12mm; }
+    @media print{
+      body{ background:#fff !important; }
+      .wrap{ box-shadow:none !important; margin:0 !important; }
+      .btn-print{ display:none !important; }
+    }
+
+    /* ===============================
+       Basis / preview op scherm
+    ================================ */
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      background:#f6f6f6;           /* zachte preview-achtergrond */
+      color:var(--fg);
+      font-family:var(--ff-sans);
+    }
+
+    .stage{
+      min-height:100%;
+      display:grid;
+      place-items:center;
+      padding:24px;
+    }
+
+    /* Kaart zelf: exact A5 in mm zodat je live ziet wat je drukt */
+    .wrap{
+      width:148mm;
+      height:210mm;
+      background:#fff;
+      border:1px solid var(--line);
+      box-shadow:0 12px 32px rgba(0,0,0,.10);
+      display:grid;
+      grid-template-rows:auto 1fr auto;
+      padding:14mm 12mm;            /* binnenmarge kaart */
+      gap:8mm;
+    }
+
+    /* ===============================
+       Header (logo's)
+    ================================ */
+    .header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10mm;
+    }
+    .logo{
+      display:block;
+      height:auto;
+      max-height:14mm;              /* algemene cap */
+    }
+    .logo.vitrien{ max-height:15mm; }
+    .logo.lov{ max-height:11mm; opacity:.9; }
+
+    /* ===============================
+       Content
+    ================================ */
+    .title{
+      font-family:var(--ff-serif);
+      font-weight:500;
+      font-size:9mm;                /* ± 25pt */
+      line-height:1.05;
+      margin:0 0 2mm 0;
+      letter-spacing:.02em;
+    }
+    .lead{
+      font-family:var(--ff-serif);
+      font-size:4mm;
+      line-height:1.35;
+      margin:0 0 7mm 0;
+      color:var(--fg);
+    }
+
+    .info{
+      display:grid;
+      gap:4mm;
+      margin:0 0 6mm 0;
+    }
+    .row{
+      display:flex;
+      gap:6mm;
+      flex-wrap:wrap;
+      align-items:baseline;
+    }
+    .meta{
+      font-family:var(--ff-mono);
+      font-size:2.8mm;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      color:var(--muted);
+      white-space:nowrap;
+    }
+    .val{
+      font-size:4mm;
+      line-height:1.35;
+      font-family:var(--ff-sans);
+    }
+
+    .note{
+      font-size:3.2mm;
+      line-height:1.5;
+    }
+    .note strong{ font-weight:600; }
+
+    .hr{
+      height:1px;
+      background:var(--line);
+      margin:4mm 0;
+    }
+
+    .links{
+      display:flex;
+      gap:6mm;
+      flex-wrap:wrap;
+      align-items:center;
+    }
+    .link{
+      font-family:var(--ff-mono);
+      font-size:3mm;
+      letter-spacing:.02em;
+      text-decoration:underline;
+      text-underline-offset:1mm;
+    }
+
+    /* ===============================
+       Footer / V.U.
+    ================================ */
+    .footer{
+      display:grid;
+      gap:3mm;
+      align-content:end;
+    }
+    .vu{
+      font-family:var(--ff-mono);
+      font-size:2.6mm;
+      color:var(--muted);
+    }
+
+    /* Print-knop (alleen scherm) */
+    .btn-print{
+      position:fixed;
+      right:18px; bottom:18px;
+      border:1px solid var(--line);
+      background:#fff;
+      font-family:var(--ff-mono);
+      font-size:12px;
+      padding:10px 12px;
+      border-radius:10px;
+      cursor:pointer;
+      box-shadow:0 6px 18px rgba(0,0,0,.08);
+    }
+    .btn-print:hover{ transform:translateY(-1px); }
+  </style>
+</head>
+<body>
+  <div class="stage">
+    <article class="wrap" role="document" aria-label="Uitnodigingskaart Vitrien Opening">
+      <!-- ============ HEADER (logo’s) ============ -->
+      <header class="header" aria-label="Logo's">
+        <!-- Vervang paden naar je eigen bestanden -->
+        <img class="logo vitrien" src="assets/img/logo.png" alt="Vitrien logo">
+        <img class="logo lov" src="assets/img/lov2030-logo.svg" alt="LOV2030 logo">
+      </header>
+
+      <!-- ============ BODY ============ -->
+      <main>
+        <h1 class="title">VITRIEN — Opening</h1>
+        <p class="lead">Winkelramen als tijdelijke tentoonstellingen in Leuven.</p>
+
+        <section class="info" aria-label="Praktische info">
+          <div class="row">
+            <div class="meta">Datum</div>
+            <div class="val">Vrijdag 13 september &middot; vanaf 15:00</div>
+          </div>
+          <div class="row">
+            <div class="meta">Locatie</div>
+            <div class="val">Leuven &middot; start aan Bondgenotenlaan</div>
+          </div>
+        </section>
+
+        <p class="note">
+          <strong>Iedereen welkom.</strong> RSVP en we zetten je op de guestlist: je krijgt een gratis drankje.
+        </p>
+
+        <div class="hr" aria-hidden="true"></div>
+
+        <div class="links" aria-label="Websites">
+          <a class="link" href="https://www.vitrien.be" target="_blank" rel="noopener">vitrien.be</a>
+          <a class="link" href="https://www.lov2030.be" target="_blank" rel="noopener">lov2030.be</a>
+          <!-- Optioneel: RSVP-link (pas aan naar je echte URL) -->
+          <a class="link" href="https://www.vitrien.be/rsvp" target="_blank" rel="noopener">RSVP</a>
+        </div>
+      </main>
+
+      <!-- ============ FOOTER ============ -->
+      <footer class="footer">
+        <p class="vu">
+          V.U.: LOV2030, Evi Gillard, Professor Roger Van Overstraetenplein 1, 3000 Leuven – niet op de openbare weg gooien.
+        </p>
+      </footer>
+    </article>
+  </div>
+
+  <!-- Handige printknop voor preview (verdwijnt in print) -->
+  <button class="btn-print" onclick="window.print()">Print / PDF</button>
+</body>
+</html>
