--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   <main id="top">
     <section class="hero">
       <div class="container">
-        <h1 data-lang-nl="Winkelramen als tijdelijke tentoonstellingen." data-lang-en="Shop windows as temporary exhibitions.">Winkelramen als tijdelijke tentoonstellingen.</h1>
-        <p class="lead" data-lang-nl="Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie." data-lang-en="A quiet route through Leuven. Existing works. Public space as gallery.">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
+        <h1 data-lang-nl="Tien kunstenaars. Tien winkels. Eén straat vol kunst." data-lang-en="Ten artists. Ten shops. One street full of art.">Tien kunstenaars. Tien winkels. Eén straat vol kunst.</h1>
+        <p class="lead" data-lang-nl="Een route door Leuven. Bestaand werk. Publieke ruimte als galerie." data-lang-en="A route through Leuven. Existing works. Public space as gallery.">Een rustige route door Leuven. Bestaand werk. Publieke ruimte als galerie.</p>
       </div>
     </section>
 
