--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <ul class="dates-list">
       <li>
         <strong data-lang-nl="Opening:" data-lang-en="Opening:">Opening:</strong>
-        <span data-lang-nl="vrijdag 13 september" data-lang-en="Friday 13 September">vrijdag 13 september</span>
+        <span data-lang-nl="zaterdag 13 september" data-lang-en="Saturday 13 September">zaterdag 13 september</span>
       </li>
       <li>
         <strong data-lang-nl="Tentoonstelling:" data-lang-en="Exhibition:">Tentoonstelling:</strong>
